--- a/FIARClient/App.config
+++ b/FIARClient/App.config
@@ -6,11 +6,12 @@
     <system.serviceModel>
         <bindings>
             <wsDualHttpBinding>
-                <binding name="WSDualHttpBinding_IFIARService" />
+                <binding name="WSDualHttpBinding_IFIARService" 
+                         clientBaseAddress="http://localhost:9002/Design_Time_Addresses/WcfFIARService/Service1/"/>
             </wsDualHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:9000/Design_Time_Addresses/WcfFIARService/Service1/"
+            <endpoint address="http://localhost:9001/Design_Time_Addresses/WcfFIARService/Service1/"
                 binding="wsDualHttpBinding" bindingConfiguration="WSDualHttpBinding_IFIARService"
                 contract="ServiceReference1.IFIARService" name="WSDualHttpBinding_IFIARService">
                 <identity>
