--- a/FIARClient/App.config
+++ b/FIARClient/App.config
@@ -6,7 +6,7 @@
   <system.serviceModel>
     <bindings>
       <wsDualHttpBinding>
-        <binding name="WSDualHttpBinding_IFIARService"   clientBaseAddress="http://localhost:9002/Design_Time_Addresses/WcfFIARService/Service1/"/>
+        <binding name="WSDualHttpBinding_IFIARService"/>
       </wsDualHttpBinding>
     </bindings>
     <client>
