--- a/FIARClient/App.config
+++ b/FIARClient/App.config
@@ -7,6 +7,9 @@
     <bindings>
       <wsDualHttpBinding>
         <binding name="WSDualHttpBinding_IFIARService"/>
+        <binding sendTimeout="00:00:10">
+
+        </binding>
       </wsDualHttpBinding>
     </bindings>
     <client>
